Mon Jul 28 23:30:03 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Take out the /nod option, and remove libc.lib from
 		the list of libraries to be linked.

	* gss-misc.c: Add additional debugging messages so we can see the
		winsock error numbers.

Tue Apr 29 06:45:32 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* gss.rc: Add version resource information to test version server
	 	code.

Sat Feb 15 12:21:15 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Link in ComErr library $(CLIB)

Tue Feb 11 14:07:28 1997  Richard Basch  <basch@lehman.com>

	* gss.c: Initialize/shutdown Winsock library
	* gss.rc: More descriptive dialog box with an example

Mon Feb 10 23:18:46 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use WLIB definition in config/windows.in

Tue Feb  4 16:18:25 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: win16 - fixed the winsock.lib path reference

Thu Jan 30 22:07:35 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Win32 - link in the resource file

Fri Nov 22 15:52:55 1996  unknown  <bjaspan@mit.edu>

	* gss-client.c (connect_to_server): use sizeof instead of h_length
 	to determine number of bytes of addr to copy from DNS response
 	[krb5-misc/211]

Tue Oct 29 10:17:25 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-client.c (client_establish_context): Fix typo; service_name
 		really should be nt_service_name.

Thu Jul 25 02:16:56 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-client.c (client_establish_context): Remove OID's that
		weren't being used, and rename gss_nt_service_name to
		nt_service_name to prevent name colision.

	* gss.c (parse_name): Add code to parse an optional fourth
	 	parameter which is the mechanism OID to actually use.  If
	 	it is ommited, the default mechanism is used.

	* gss-client.c (client_establish_context): Added parameter
		oid_name, which allows the user to specify the OID that
		he/she actually wants to use to as the mechanism.
